--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,13 @@ services:
     ports:
       - 5000:5000
     restart: always
+  db:
+    container_name: database
+    image: mysql:latest
+    env_file:
+      - ./db/.env
+    volumes:
+      - ./db/data:/var/lib/mysql
+    ports:
+      - 3306:3306
+    restart: always
