--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm install && npm install typescript sequelize mysql2
+RUN npm install && npm install typescript
 COPY . .
 
 EXPOSE 5000
