--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "prestart": "tsc",
+    "prestart": "rm -rf dist/* && tsc",
     "start": "node dist/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,10 +14,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
-    "sequelize": "^6.6.5"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.6.5",
+    "sequelize-typescript": "^2.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^16.7.10"
+    "@types/node": "^16.7.10",
+    "@types/validator": "^13.6.3"
   }
 }
