--- a/back/package.json
+++ b/back/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.10",
-    "@types/validator": "^13.6.3"
+    "@types/validator": "^13.6.3",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
