feat: #11 #39 login (secure)

--- a/back/.env
+++ b/back/.env
@@ -5,6 +5,8 @@ FT_OAUTH_CLIENT_ID=~
 FT_OAUTH_CLIENT_SECRET=~
 FT_OAUTH_REDIRECT_URI=~
 
+JWT_SECRET_KEY=~
+
 MYSQL_DATABASE=~
 MYSQL_USERNAME=~
 MYSQL_PASSWORD=~
