--- a/back/package.json
+++ b/back/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "prestart-window": "del /S /Q dist\\* && tsc",
-    "prestart": "rm -rf dist/* && tsc",
+    "prestart": "del /S /Q dist\\* && tsc",
+    "prestart-window": "rm -rf dist/* && tsc",
     "start": "node dist/main.js",
     "test": "nodemon --exec ts-node -r tsconfig-paths/register src/main.ts"
   },
@@ -13,15 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.7.10",
     "@types/validator": "^13.6.3",
     "nodemon": "^2.0.12",
