--- a/back/.env
+++ b/back/.env
@@ -6,6 +6,6 @@ FT_OAUTH_CLIENT_SECRET=~
 FT_OAUTH_REDIRECT_URI=~
 
 MYSQL_DATABASE=~
-MYSQL_USERNAME=root
+MYSQL_USERNAME=~
 MYSQL_PASSWORD=~
 MYSQL_HOST=~
