--- a/back/package.json
+++ b/back/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.7.10",
+    "@types/sequelize": "^4.28.10",
     "@types/validator": "^13.6.3",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
