feat: #46 get project list

--- a/back/.env
+++ b/back/.env
@@ -7,7 +7,7 @@ FT_OAUTH_REDIRECT_URI=~
 
 JWT_SECRET_KEY=~
 
-MYSQL_DATABASE=42DoProject
-MYSQL_USERNAME=root
-MYSQL_PASSWORD=42do
-MYSQL_HOST=db
+MYSQL_DATABASE=~
+MYSQL_USERNAME=~
+MYSQL_PASSWORD=~
+MYSQL_HOST=~
