--- a/db/.env
+++ b/db/.env
@@ -1,4 +1,4 @@
-MYSQL_HOST=db
-MYSQL_PORT=3306
-MYSQL_ROOT_PASSWORD=42do
-MYSQL_DATABASE=42DoProject
+MYSQL_HOST=~
+MYSQL_PORT=~
+MYSQL_ROOT_PASSWORD=~
+MYSQL_DATABASE=~
