feat: #48 profile page

--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -9,7 +9,7 @@
     "removeComments": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
   },
   "exclude": [
     "node_modules"
