--- a/back/package.json
+++ b/back/package.json
@@ -21,7 +21,8 @@
     "mysql2": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
-    "sequelize-typescript": "^2.1.0"
+    "sequelize-typescript": "^2.1.0",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
