--- a/back/package.json
+++ b/back/package.json
@@ -22,7 +22,8 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -31,6 +32,7 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.7.10",
     "@types/sequelize": "^4.28.10",
+    "@types/uuid": "^8.3.1",
     "@types/validator": "^13.6.3",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
