feat: #74 mongo db init

--- a/back/.env
+++ b/back/.env
@@ -11,3 +11,8 @@ MYSQL_DATABASE=~
 MYSQL_USERNAME=~
 MYSQL_PASSWORD=~
 MYSQL_HOST=~
+
+MONGODB_DATABASE=~
+MONGODB_USERNAME=~
+MONGODB_PASSWORD=~
+MONGODB_HOST=~
