--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.5",
     "mysql2": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
@@ -30,6 +31,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.7.10",
     "@types/sequelize": "^4.28.10",
     "@types/uuid": "^8.3.1",
