--- a/db/.env
+++ b/db/.env
@@ -2,3 +2,7 @@ MYSQL_HOST=~
 MYSQL_PORT=~
 MYSQL_ROOT_PASSWORD=~
 MYSQL_DATABASE=~
+
+MONGO_INITDB_DATABASE=~
+MONGO_INITDB_ROOT_USERNAME=~
+MONGO_INITDB_ROOT_PASSWORD=~
