feat: #94 Login, LogOut MainPage

--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,9 +1,10 @@
-FROM node:14.17.5-alpine
+FROM --platform=linux/amd64 node:14.17.5-alpine
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
 
+# RUN apk add alpine-sdk
 RUN npm install
 COPY . .
 
