--- a/back/.env
+++ b/back/.env
@@ -7,15 +7,15 @@ FT_OAUTH_REDIRECT_URI=~
 
 JWT_SECRET_KEY=~
 
-MYSQL_DATABASE=~
-MYSQL_USERNAME=~
-MYSQL_PASSWORD=~
-MYSQL_HOST=~
+MYSQL_DATABASE=42DoProject
+MYSQL_USERNAME=root
+MYSQL_PASSWORD=42do
+MYSQL_HOST=db
 
-MONGODB_DATABASE=~
-MONGODB_USERNAME=~
-MONGODB_PASSWORD=~
-MONGODB_HOST=~
+MONGODB_DATABASE=test
+MONGODB_USERNAME=root
+MONGODB_PASSWORD=1234
+MONGODB_HOST=mongo
 
 TAG_LIST=react;express;typescript;mysql
 POSITION_LIST=FrontEnd;BackEnd;DevOps
