--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
