--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer-s3": "^2.7.10",
+    "aws-sdk": "^2.1005.0",
     "axios": "^0.21.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -20,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
     "multer": "^1.4.3",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
