--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@toast-ui/react-editor": "^3.1.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "dotenv": "^10.0.0",
