--- a/db/.env
+++ b/db/.env
@@ -1,8 +1,8 @@
-MYSQL_HOST=db
-MYSQL_PORT=3306
-MYSQL_ROOT_PASSWORD=42do
-MYSQL_DATABASE=42DoProject
+MYSQL_HOST=~
+MYSQL_PORT=~
+MYSQL_ROOT_PASSWORD=~
+MYSQL_DATABASE=~
 
-MONGO_INITDB_DATABASE=test
-MONGO_INITDB_ROOT_USERNAME=root
-MONGO_INITDB_ROOT_PASSWORD=1234
+MONGO_INITDB_DATABASE=~
+MONGO_INITDB_ROOT_USERNAME=~
+MONGO_INITDB_ROOT_PASSWORD=~
