--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "@toast-ui/react-editor": "^3.1.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
