--- a/back/package.json
+++ b/back/package.json
@@ -26,6 +26,7 @@
     "multer-s3": "^2.9.0",
     "mysql2": "^2.3.0",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
     "socket.io": "^4.2.0",
@@ -39,6 +40,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.7.10",
+    "@types/request": "^2.48.7",
     "@types/sequelize": "^4.28.10",
     "@types/uuid": "^8.3.1",
     "@types/validator": "^13.6.3",
