--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -20,16 +20,18 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: list of files
-        working-directory: back
-        run: ls
+
   deploy:
     name: Deploy
     needs: workdir
     runs-on: ubuntu-latest
     environment: production
     steps:
+    - uses: actions/checkout@v2
+      with:
+        dir: ./back
+    - name: list of files
+      run: ls
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
