--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -33,7 +33,7 @@ jobs:
       with:
         path: ./back
     - name: list of files
-      run: ls
+      run: cd back && ls
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
