--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -11,7 +11,7 @@ env:
   ECR_REPOSITORY: image-repo
   ECS_SERVICE: service-backend
   ECS_CLUSTER: cluster
-  ECS_TASK_DEFINITION: task-definition-back.json
+  ECS_TASK_DEFINITION: ./.github/workflows/task-definition-back.json
   CONTAINER_NAME: backend
 
 jobs:
