--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -12,6 +12,7 @@ env:
   ECS_SERVICE: service-backend
   ECS_CLUSTER: cluster
   ECS_TASK_DEFINITION: ./.github/workflows/task-definition-back.json
+  ECS_TASK_NAME: task-backend
   CONTAINER_NAME: backend
 
 jobs:
@@ -61,7 +62,10 @@ jobs:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
         container-name: ${{ env.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
-
+    - name: stop working task
+      run: |
+        tasks=`echo $(aws --region $AWS_REGION ecs list-tasks --family $ECS_TASK_NAME --cluster $ECS_CLUSTER | jq -r '.taskArns | reduce .[] as $item (""; . + $item + " ")') | cut -d '/' -f 3`
+        aws --region $AWS_REGION ecs stop-task --task $tasks --cluster $ECS_CLUSTER
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
