--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
+    "react-meta-tags": "^1.0.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
