--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@toast-ui/editor-plugin-color-syntax": "^3.0.2",
     "@toast-ui/react-editor": "^3.1.1",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
@@ -17,7 +18,6 @@
     "react-dom": "^17.0.2",
     "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
-    "react-meta-tags": "^1.0.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
