--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: [ deploy-frontend ]
+    branches: [ deploy-frontend-dont-use ]
     types: [ closed ]
   workflow_dispatch:
 
