--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: [ deploy-frontend-dont-use ]
+    branches: [ deploy-frontend ]
     types: [ closed ]
   workflow_dispatch:
 
@@ -16,21 +16,5 @@ jobs:
       uses: actions/checkout@v2
     - name: list of files
       run: cd front && ls
-    - name: build
-      run: |
-        cd front
-        npm install
-        npm run build
-  deploy:
-    needs: build
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-      - name: deploy
-        env:
-          ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
-          ACCOUNT_EMAIL: ${{ secrets.ACCOUNT_EMAIL }}
-          AUTH_KEY: ${{ secrets.AUTH_KEY }}
-        run: |
-          curl -X POST "https://api.cloudflare.com/client/v4/accounts/$ACCOUNT_ID/pages/projects/42doproject/deployments" -H "X-Auth-Email: $ACCOUNT_EMAIL" -H "X-Auth-Key: $AUTH_KEY"
-        
+    - name: list of filess
+      run: ls
