--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -16,5 +16,32 @@ jobs:
       uses: actions/checkout@v2
     - name: list of files
       run: cd front && ls
-    - name: list of filess
-      run: ls
+    - name: cache node modules
+      uses: actions/cache@v2
+      with:
+        path: front/node_modules
+        key: ${{ runner.OS }}-build-${{ hashFiles('front/**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.OS }}-build-
+    - name: install
+      run: |
+        cd front
+        npm install
+    - name: react build
+      run: |
+        cd front
+        npm run build
+
+  deploy:
+    needs: build
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: deploy
+        env:
+          ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
+          ACCOUNT_EMAIL: ${{ secrets.ACCOUNT_EMAIL }}
+          AUTH_KEY: ${{ secrets.AUTH_KEY }}
+        run: |
+          curl -X POST "https://api.cloudflare.com/client/v4/accounts/$ACCOUNT_ID/pages/projects/42doproject/deployments" -H "X-Auth-Email: $ACCOUNT_EMAIL" -H "X-Auth-Key: $AUTH_KEY"
+        
