--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -30,9 +30,7 @@ jobs:
     - name: react build
       run: |
         cd front
-        echo "npm run build" > build.sh
-        chmod 777 build.sh
-        source ./build.sh || true
+        npm run build
         
   deploy:
     needs: build
