--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -28,6 +28,8 @@ jobs:
         cd front
         npm install
     - name: react build
+      env:
+        CI: false
       run: |
         cd front
         npm run build
