--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,9 +8,9 @@ on:
 
 env:
   AWS_REGION: ap-northeast-2
-  ECR_REPOSITORY: image-repo
+  ECR_REPOSITORY: 42doproject
   ECS_SERVICE: service-backend
-  ECS_CLUSTER: doproject
+  ECS_CLUSTER: doproject42
   ECS_TASK_DEFINITION: ./.github/workflows/task-definition-back.json
   ECS_TASK_NAME: task-backend
   CONTAINER_NAME: backend
