feature google login

--- a/db/.env
+++ b/db/.env
@@ -1,8 +1,8 @@
-MYSQL_HOST=~
-MYSQL_PORT=~
-MYSQL_ROOT_PASSWORD=~
-MYSQL_DATABASE=~
+MYSQL_HOST=db
+MYSQL_PORT=3036
+MYSQL_ROOT_PASSWORD=1234
+MYSQL_DATABASE=test
 
-MONGO_INITDB_DATABASE=~
-MONGO_INITDB_ROOT_USERNAME=~
-MONGO_INITDB_ROOT_PASSWORD=~
+MONGO_INITDB_DATABASE=test
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=1234
