--- a/front/package.json
+++ b/front/package.json
@@ -12,10 +12,10 @@
     "bootstrap": "^5.1.0",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
-    "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.4",
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
+    "sass": "^1.49.8",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
