feat: #874 add google login
- add google login
- delete node-sass and install sass

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,7 @@ services:
     restart: always
   db:
     container_name: mysql
-    # image: mysql:latest
-    platform: linux/x86_64
-    image : library/mysql:latest
+    image: mysql:latest
     env_file:
       - ./db/.env
     volumes:
